# simple-websockets

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/simple_websockets/: client.py  ws.py
src/simplews/: __about__.py  __init__.py  client.py  server.py  ws.py
