[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-websockets"
dynamic = ["version"]
description = 'Simple websocket server and client with callback-based API.'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "xuanzhi33", email = "xuanzhi33@qq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "websockets",
]

[project.urls]
Documentation = "https://github.com/xuanzhi33/simple-websockets#readme"
Issues = "https://github.com/xuanzhi33/simple-websockets/issues"
Source = "https://github.com/xuanzhi33/simple-websockets"

[tool.hatch.version]
path = "src/simplews/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/simplews"]
